spec/hecate/core/renderer/__snapshots__/tty/empty_file.snap
error: empty file
  --> empty.cr:1:1
  |
1 | 
  | ^ file is empty
  |
